Changed plugin to C++ source. Finished 2a and 2b. Added Vim script to set env vars (for GVim).

--- a/statement-count/Makefile
+++ b/statement-count/Makefile
@@ -8,7 +8,7 @@ INCLUDE= -I$(GCCPLUGINS_DIR)/include -I$(CC)
 
 FLAGS= -fPIC -O2
 
-plugin.so: plugin.c 
+plugin.so: plugin.cpp
 	$(CC) $(INCLUDE) $(FLAGS) -shared $^ -o $@
 
 test: plugin.so
